creating reply and like schema and path
