# circle-app-backend/swagger/swagger-output.json
@@ -11,64 +11,11 @@
     }
   ],
   "paths": {
-    "/api/v1/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/v1/users": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "post": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "patch": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/users/{id}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/api/v1/auth/login": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -89,6 +36,9 @@
     },
     "/api/v1/auth/register": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -109,6 +59,9 @@
     },
     "/api/v1/user/me": {
       "get": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "parameters": [
           {
@@ -134,8 +87,24 @@
         ]
       }
     },
-    "/api/v1/dashboard": {
+    "/api/v1/users": {
       "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Find all users",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Update existing user",
         "description": "",
         "parameters": [
           {
@@ -159,10 +128,38 @@
             "bearerAuth": []
           }
         ]
+      }
+    },
+    "/api/v1/users/{id}": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Find a user by params id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     },
     "/api/v1/threads": {
       "get": {
+        "tags": [
+          "Threads"
+        ],
+        "summary": "Get all thread",
         "description": "",
         "responses": {
           "200": {
@@ -171,16 +168,51 @@
         }
       },
       "post": {
+        "tags": [
+          "Threads"
+        ],
+        "summary": "Create new thread",
         "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/createThreadSchema"
+              }
+            }
           }
         }
       }
     },
     "/api/v1/threads/{id}": {
       "get": {
+        "tags": [
+          "Threads"
+        ],
+        "summary": "get single thread",
         "description": "",
         "parameters": [
           {
@@ -199,6 +231,48 @@
         }
       },
       "delete": {
+        "tags": [
+          "Threads"
+        ],
+        "summary": "Delete thread",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/v1/user/threads/{id}": {
+      "get": {
+        "tags": [
+          "Threads"
+        ],
         "description": "",
         "parameters": [
           {
@@ -217,8 +291,53 @@
         }
       }
     },
-    "/api/v1/user/threads/{id}": {
-      "get": {
+    "/api/v1/threads/reply": {
+      "post": {
+        "tags": [
+          "Reaction"
+        ],
+        "summary": "Create new Reply",
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/createThreadSchema"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/threads/reply/{id}": {
+      "delete": {
+        "tags": [
+          "Reaction"
+        ],
+        "summary": "Delete reply",
         "description": "",
         "parameters": [
           {
@@ -228,13 +347,108 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/v1/threads/like": {
+      "post": {
+        "tags": [
+          "Reaction"
+        ],
+        "summary": "Like a thread",
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/createThreadSchema"
+              }
+            }
           }
         }
+      }
+    },
+    "/api/v1/threads/like/{id}": {
+      "delete": {
+        "tags": [
+          "Reaction"
+        ],
+        "summary": "Unlike a thread",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     }
   },
@@ -272,6 +486,17 @@
           "password": {
             "type": "string",
             "format": "password"
+          }
+        }
+      },
+      "createThreadSchema": {
+        "type": "object",
+        "properties": {
+          "content": {
+            "type": "string"
+          },
+          "image": {
+            "type": "string"
           }
         }
       }
